fixed small css bug, making overflow-x always hidden, not auto

--- a/css/popup.css
+++ b/css/popup.css
@@ -11,5 +11,5 @@ body {
     margin-left: -5px;
 
     overflow: scroll;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
